<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">章鱼回收</string>

    <string name="welcome_to_use_octopus_recovery">欢迎使用章鱼回收</string>
    <string name="please_scan_qr_code">扫描二维码进行资源分类</string>
    <string name="face_recognition_and_login">人脸识别登录</string>
    <string name="please_choose_junk_class">请选择您要投递的物品分类</string>
    <string name="please_choose_clear_class">请选择需要清理的垃圾品类</string>
    <string name="plastic_bottle">塑料瓶</string>
    <string name="drinks_bottle">饮料瓶</string>
    <string name="plastic_cup">塑料杯</string>
    <string name="cans">易拉罐</string>
    <string name="plastic_water_cup">塑料水杯</string>
    <string name="newspaper">报纸</string>
    <string name="carton">纸箱</string>
    <string name="office_paper">办公用纸</string>
    <string name="books_and_magazines">书籍杂志</string>
    <string name="other_paper">其他纸张</string>
    <string name="clothes">衣服</string>
    <string name="plush_toys">毛绒玩具</string>
    <string name="bed_clothes">床上织品</string>
    <string name="other_fabrics">其他织品</string>
    <string name="metal_kitchenware">金属厨具</string>
    <string name="stainless_steel_teacup">不锈钢茶杯</string>
    <string name="metal_tableware">金属餐具</string>
    <string name="kitchen_knife">菜刀</string>
    <string name="plastic_glove">塑料手套</string>
    <string name="plastic_packaging">塑料包装</string>
    <string name="plastic_chair">塑料椅</string>
    <string name="plastic_basin">塑料盆</string>
    <string name="battery">电池</string>
    <string name="waste_battery">废电池</string>
    <string name="expired_drugs">过期药品</string>
    <string name="thermometer">温度计</string>
    <string name="waste_fluorescent_lamp">废日光灯</string>
    <string name="glass_bottle">玻璃瓶</string>
    <string name="glass_cup">玻璃杯</string>
    <string name="glass_yogurt">酸奶瓶</string>
    <string name="door_is_open_throw_it">门已开启，快去投递吧</string>
    <string name="bottle">塑料瓶</string>
    <string name="spin">织物</string>
    <string name="paper">纸张</string>
    <string name="poison">有害物</string>
    <string name="jyz">经验值</string>
    <string name="current_machine_fault">当前机柜故障</string>
    <string name="current_machine_ok">当前机柜正常</string>
    <string name="can_not_get_deliver_detail">无法获取您的投递详情</string>
    <string name="your_table_will_to_wx">您本次投递获取的积分稍后会推送到您的小程序</string>
    <string name="customer_service_telephone">客服电话：4007774002</string>
    <string name="auth_fail">身份信息核验失败</string>
    <string name="repeat">重试</string>
    <string name="x">x</string>
    <string name="ge">个</string>
    <string name="ci">次</string>
    <string name="kg">公斤</string>
    <string name="zy_icon">章鱼币</string>
    <string name="all_income">总收入：</string>
    <string name="over">退出登录</string>
    <string name="db">电表</string>
    <string name="gm">柜门</string>
    <string name="wifi">WIFI</string>
    <string name="sx">水箱</string>
    <string name="fun">风扇</string>
    <string name="xd">消毒</string>
    <string name="lamp">灯箱</string>
    <string name="temperature">温度</string>
    <string name="net_setting">网络设置</string>
    <string name="location_setting">点位</string>
    <string name="sys_setting">系统设置</string>
    <string name="app_update">软件</string>
    <string name="banner_res_save">广告</string>
    <string name="banner_res_test">投递测试</string>
    <string name="banner_res_inspection">巡检日志</string>

    <string name="pcb_update">硬件</string>
    <string name="system_self_check">系统自检</string>
    <string name="i_do_not_know_you">我不认识你</string>
    <string name="reboot_first_start_time">00:00</string>
    <string name="reboot_first_end_time">00:30</string>
    <string name="clear_electricmeter_start_time">06-01 10:00</string>
    <string name="clear_electricmeter_end_time">06-01 11:00</string>
    <string name="hema_showbanner_start_time">06-05 00:00</string>
    <string name="hema_showbanner_end_time">06-05 24:00</string>
    <string name="close_hdmi_start_time">00:30</string>
    <string name="close_hdmi_end_time">01:00</string>
    <string name="sys_ammeter_start_time">01:00</string>
    <string name="sys_ammeter_end_time">02:00</string>
    <string name="app_update_start_time">02:00</string>
    <string name="app_update_end_time">03:00</string>
    <string name="banner_update_start_time">03:00</string>
    <string name="banner_update_end_time">04:00</string>
    <string name="pcb_update_start_time">04:00</string>
    <string name="pcb_update_end_time">05:00</string>
    <string name="reboot_start_time">06:00</string>
    <string name="reboot_end_time">06:30</string>
    <string name="open_hdmi_start_time">07:00</string>
    <string name="open_hdmi_end_time">08:00</string>
    <string name="sys_ammeter_start_time_afternoon">11:00</string>
    <string name="sys_ammeter_end_time_afternoon">12:00</string>
    <string name="sys_not_send_full_start_time">00:00</string>
    <string name="sys_not_send_full_end_time">08:00</string>
    <string name="sys_volume_is_mute_start_time">08:00</string>
    <string name="sys_volume_is_mute_end_time">22:00</string>
    <string name="update_location_start_time">08:00</string>
    <string name="update_location_end_time">09:00</string>
    <string-array name="tracking_mode_array">
        <item>Fast</item>
        <item>Robust</item>
        <item>Tracking_Rect</item>
    </string-array>
    <string name="pt_code">点位编码：%1$s</string>
    <string name="living_areas">小区名称：%1$s</string>
    <string name="version">version%1$s</string>
    <string name="please_choose_your_role">请选择你的身份</string>
    <string name="maintenance_people">运维技术员</string>
    <string name="clear_garbage_people">清运人员</string>
    <string name="octopus_guest">游客</string>
    <string name="next_step">下一步</string>
    <string name="function_self_check">功能检测</string>
    <string name="function_system_check">系统状态</string>
    <string name="images_eg">图例:</string>
    <string name="images_eg_ok">正常</string>
    <string name="images_eg_exception">异常</string>
    <string name="images_eg_bad">未开启</string>
    <string name="deliverable_items">可投递物品</string>
    <string name="go_to_guide">查看操作指南</string>
    <string name="clear_ammeter_data">电表数据清零</string>
    <string name="upload_meter_data">上传电表数据</string>
    <string name="support">支持</string>
    <string name="face_tel_tip">未匹配到您的人脸识别信息\n请输入手机号精确匹配</string>
    <string name="polling_test">机构循环测试</string>
    <string name="polling_test_door">投递门循环测试</string>
    <string name="the_current_network_is_abnormal">当前网络异常</string>
    <string name="server_connection_has_been_disconnected">服务器连接已断开</string>
    <string name="confirm">确定</string>
    <string name="order_yes_net_no_tip">本次投递所获章鱼币会稍后发送至您账户\n请耐心等候，如有疑问请联系客服：\n4007774002</string>
    <string name="thank_you_for_your_use">感谢您的使用</string>
    <string name="order_no_tip">绿水青山就是金山银山\n让我们一起为拥有更美好的环境努力吧！</string>
    <string name="coupons_prompt">您有一张盒马鲜生代金券快去领取吧！</string>
    <string name="cabinet_rust">柜体生锈</string>
    <string name="cabinet_broken">柜体破损</string>
    <string name="cabinet_loose">柜体松动</string>
    <string name="external_pipeline_broken">外接管线破损</string>
    <string name="door_plastic_bottle">塑料瓶门</string>
    <string name="door_glass_bottle">玻璃瓶门</string>
    <string name="door_paper">纸张柜门</string>
    <string name="door_door_spin">织物柜门</string>
    <string name="door_metal">金属柜门</string>
    <string name="door_plastic">塑料制品门</string>
    <string name="door_glass_drive">玻璃瓶传送</string>
    <string name="door_plastic_drive">塑料瓶传送</string>
    <string name="infrared_detection_bottle">瓶子</string>
    <string name="infrared_detection_paper">纸张</string>
    <string name="infrared_detection_spin">织物</string>
    <string name="infrared_detection_metal">金属</string>
    <string name="infrared_detection_plastic">塑料</string>
    <string name="maintain_fun_host">主机柜</string>
    <string name="maintain_fun_paper">纸张柜</string>
    <string name="maintain_fun_spin">织物柜</string>
    <string name="maintain_fun_metal">金属柜</string>
    <string name="maintain_fun_plastic">塑料制品柜</string>
    <string name="maintain_lamp_host">主机柜</string>
    <string name="maintain_lamp_paper">纸张柜</string>
    <string name="maintain_lamp_spin">织物柜</string>
    <string name="maintain_lamp_metal">金属柜</string>
    <string name="maintain_lamp_plastic">塑料制品柜</string>
    <string name="maintain_lock_host">主机柜正门</string>
    <string name="maintain_lock_paper">纸张门</string>
    <string name="maintain_lock_spin">织物柜</string>
    <string name="maintain_lock_side">侧门</string>
    <string name="maintain_lock_metal">金属门</string>
    <string name="maintain_screen_calibration">触摸校准</string>
    <string name="maintain_ammeter_read">电表读数</string>
    <string name="front_camera">前置摄像头</string>
    <string name="order_exception">订单异常</string>
    <string name="order_exception_text">该笔订单为大额订单需人工审核</string>
    <string name="order_exception_tips">审核通过后章鱼币将正常发放，请耐心等待</string>
    <string name="order_customer_service">客服电话：4007774002</string>
    <string name="order_service_review">（章鱼币审核后发放）</string>
    <string name="clear_qrcode_tips">网络异常，请扫描二维码上传清运单。\n确保清运单数据正常上传！！</string>
    <string name="clear_upload_success">清运单上传完成</string>
    <string name="maintain_log_tip">请确认巡检单内容无误后\n上传巡检单！</string>
    <string name="steal_recycle_exception">该笔订单异常需进行审核</string>

    <string name="yintai_yiliao_text_1">你知道吗？你笑起来的样子真好看！</string>
    <string name="yintai_yiliao_text_2">小姐姐！你是我见过最美的笑容守护天使！</string>
    <string name="yintai_yiliao_text_3">辛苦了我的天使，记得每天保持微笑哦！</string>
    <string name="yintai_yiliao_text_4">你的笑容，是我今天最灿烂的阳光！</string>
    <string name="yintai_yiliao_text_5">你的笑容没有酒,我却醉的像条狗，汪汪！</string>
    <string name="yintai_yiliao_text_6">我的天使,照顾别人的同时，也记得照顾好自己！</string>
    <string name="yintai_yiliao_text_7">被我发现了，口罩也遮不住你的美！</string>
    <string name="yintai_yiliao_text_8">你的笑容，有治愈的超能力。</string>
    <string name="yintai_yiliao_text_9">所有的情话都抵不过你的一个微笑 </string>
    <string name="yintai_yiliao_text_10">月亮睡了你不睡，你是微笑小宝贝！</string>


</resources>
