<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_type_paper"
    android:layout_width="360px"
    android:layout_height="wrap_content"
    android:gravity="center|top"
    android:orientation="vertical"
    android:visibility="gone"
    tools:visibility="visible">

    <com.tlh.android.widget.ImageViewWithTxt
        android:id="@+id/iv_paper"
        android:layout_width="244px"
        android:layout_height="244px"
        android:src="@mipmap/ic_class_paper" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="21px"
        android:orientation="horizontal">

        <com.tlh.android.widget.NoPaddingTextView
            android:layout_width="21px"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/black_dot"
            android:drawablePadding="21px"
            android:text="@string/newspaper"
            android:textColor="@color/black"
            android:textSize="22px" />

        <com.tlh.android.widget.NoPaddingTextView
            android:layout_width="21px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15px"
            android:drawableTop="@drawable/black_dot"
            android:drawablePadding="21px"
            android:text="@string/carton"
            android:textColor="@color/black"
            android:textSize="22px" />

        <com.tlh.android.widget.NoPaddingTextView
            android:layout_width="21px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14px"
            android:drawableTop="@drawable/black_dot"
            android:drawablePadding="21px"
            android:text="@string/books_and_magazines"
            android:textColor="@color/black"
            android:textSize="22px" />

        <com.tlh.android.widget.NoPaddingTextView
            android:layout_width="21px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15px"
            android:drawableTop="@drawable/black_dot"
            android:drawablePadding="21px"
            android:text="@string/office_paper"
            android:textColor="@color/black"
            android:textSize="22px" />


        <com.tlh.android.widget.NoPaddingTextView
            android:layout_width="21px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14px"
            android:drawableTop="@drawable/black_dot"
            android:drawablePadding="21px"
            android:text="@string/other_paper"
            android:textColor="@color/black"
            android:textSize="22px" />
    </LinearLayout>
</LinearLayout>