<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="858px"
    android:layout_height="1170px"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="450px"
        android:layout_height="450px"
        android:layout_gravity="center"
        android:layout_marginTop="99px"
        android:scaleType="centerInside"
        android:src="@mipmap/ic_animation_fault" />

    <com.tlh.android.widget.ImageTextButton
        android:id="@+id/ll_welcome_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo_top"
        android:layout_marginLeft="241px"
        android:layout_marginTop="116px"
        android:layout_marginRight="241px"
        android:gravity="center_horizontal"
        android:text="@string/current_machine_fault"
        android:textColor="@color/black"
        android:textSize="38px"
        custom:leftDrawable="@mipmap/ic_left_fish"
        custom:rightDrawable="@mipmap/ic_right_fish" />

    <com.tlh.android.widget.NoPaddingTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32px"
        android:textColor="@color/black"
        android:textSize="40px"
        tools:text="@string/can_not_get_deliver_detail" />

    <com.tlh.android.widget.NoPaddingTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18px"
        android:textColor="@color/gray_878787"
        android:textSize="32px"
        tools:text="@string/your_table_will_to_wx" />

    <com.tlh.android.widget.NoPaddingTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24px"
        android:textColor="@color/gray_878787"
        android:textSize="32px"
        android:text="@string/customer_service_telephone" />

    <com.tlh.android.widget.NoPaddingTextView
        android:id="@+id/tv_up_fault"
        android:layout_width="734px"
        android:layout_height="114px"
        android:layout_gravity="center"
        android:layout_marginTop="75px"
        android:background="@drawable/sec_btn_theme_bg"
        android:gravity="center"
        android:text="即将推出登录"
        android:textColor="@color/tv_theme_color"
        android:textSize="38px" />

</LinearLayout>


