<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_screen_other_bg">

    <include layout="@layout/page_head_logo" />

    <include layout="@layout/page_head_cutdown_time" />

    <com.tlh.android.widget.ImageTextButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="242px"
        android:layout_marginLeft="312px"
        android:layout_marginRight="312px"
        android:gravity="center"
        android:text="@string/please_choose_your_role"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_top"
        android:textColor="@color/black"
        android:textSize="38px"
        app:leftDrawable="@mipmap/ic_left_fish"
        app:rightDrawable="@mipmap/ic_right_fish" />

    <com.tlh.android.widget.NoPaddingTextView
        android:id="@+id/tv_maintenance_people"
        android:layout_width="734px"
        android:layout_height="114px"
        android:background="@drawable/sec_btn_theme_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/maintenance_people"
        android:textColor="@color/tv_theme_color"
        android:textSize="38px"
        android:layout_marginTop="416px"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.tlh.android.widget.NoPaddingTextView
        android:id="@+id/tv_clear_garbage_people"
        android:layout_width="734px"
        android:layout_height="114px"
        android:background="@drawable/sec_btn_theme_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/clear_garbage_people"
        android:textColor="@color/tv_theme_color"
        android:textSize="38px"
        android:layout_marginTop="83px"
        app:layout_constraintTop_toBottomOf="@id/tv_maintenance_people"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>